--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <button id="noBtn">No</button>
 
     <div id="cat">
-        <h2 style="color:white;">¡Sabía que dirías que sí! 🥰</h2>
-        <img src="https://i.imgur.com/4AiXzf8.jpeg" alt="Gatito con rosa">
+        <h2 style="color:white;">TE AMOOOOOOOO 🥰</h2>
+        <img src="https://es.pinterest.com/ideas/gato-con-una-flor/927862881429/" alt="Gatito con rosa">
     </div>
 </div>
 
@@ -115,4 +115,5 @@
 </script>
 
 </body>
+
 </html>
