--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div id="cat">
         <h2 style="color:white;">TE AMOOOOOOOO 🥰</h2>
-        <img src="https://previews.123rf.com/images/voren1/voren11706/voren1170600090/80561258-brown-kitten-and-a-red-rose-isolated-on-a-white-background.avif" alt="Gatito con rosa">
+        <img src="gatito conr osa.jpg" alt="Gatito con rosa">
     </div>
 </div>
 
@@ -117,4 +117,5 @@
 </body>
 
 </html>
+
 
